Fixed menu jump on page load

--- a/assets/css/theme-rtl.css
+++ b/assets/css/theme-rtl.css
@@ -145,7 +145,7 @@
 	background: #222222;
 }
 /* @noflip */
-.tb-primary-menu > li > .menu-btn.sf-with-ul {
+.tb-primary-menu > li.menu-item-has-children > .menu-btn {
 	padding-right: 10px;
 }
 
@@ -626,7 +626,7 @@ article.page {
 	.tb-primary-menu > li > .menu-btn {
 		padding: 18px 15px;
 	}
-	.tb-primary-menu > li > a.sf-with-ul {
+	.tb-primary-menu > li.menu-item-has-children > .menu-btn {
 		padding-left: 7px;
 	}
 
@@ -654,7 +654,7 @@ article.page {
 	.tb-primary-menu > li > .menu-btn {
 		padding: 18px 10px;
 	}
-	.tb-primary-menu > li > .menu-btn.sf-with-ul {
+	.tb-primary-menu > li.menu-item-has-children > .menu-btn {
 		padding-left: 5px;
 	}
 
