--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -144,7 +144,7 @@
 	background: #222222;
 }
 /* @noflip */
-.tb-primary-menu > li > .menu-btn.sf-with-ul {
+.tb-primary-menu > li.menu-item-has-children > .menu-btn {
 	padding-right: 10px;
 }
 
@@ -625,7 +625,7 @@ article.page {
 	.tb-primary-menu > li > .menu-btn {
 		padding: 18px 15px;
 	}
-	.tb-primary-menu > li > a.sf-with-ul {
+	.tb-primary-menu > li.menu-item-has-children > .menu-btn {
 		padding-right: 7px;
 	}
 
@@ -653,7 +653,7 @@ article.page {
 	.tb-primary-menu > li > .menu-btn {
 		padding: 18px 10px;
 	}
-	.tb-primary-menu > li > .menu-btn.sf-with-ul {
+	.tb-primary-menu > li.menu-item-has-children > .menu-btn {
 		padding-right: 5px;
 	}
 
